connect to servlet

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,7 +70,7 @@
           <h4 class="modal-title">Sign-in form</h4>
         </div>
         <div class="modal-body">
-        	<form action="/Login" method="post"> 
+        	<form action="LoginServlet2" method="post"> 
 		      	<input type="text" placeholder="Username" name="username"> 
 		    	<input type="text" placeholder="Password" name="psw">
 		    	<button type="submit">Submit</button> 
