--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -106,8 +106,11 @@
 				    <!-- Login Form -->
 				    <h4>New User</h4>
 				    <form action="RegisterServlet"> 
-				      <input type="text" id="login" class="fadeIn second" name="login" placeholder="name">
-				      <input type="text" id="password" class="fadeIn second" name="login" placeholder="password">
+				      <input type="text" id="name" class="fadeIn second" name="register" placeholder="name">
+				      <input type="text" id="password" class="fadeIn second" name="register" placeholder="password">
+				      <input type="text" id="nick-name" class="fadeIn second" name="register" placeholder="nick name">
+				      <input type="text" id="email" class="fadeIn second" name="register" placeholder="email">
+				      <input type="text" id="address" class="fadeIn second" name="register" placeholder="address">
 				      <input type="submit" class="fadeIn fourth" value="submit">
 				    </form>
 	
