suggesting new way to look at pruduct and order

--- a/src/main/webapp/register_test.html
+++ b/src/main/webapp/register_test.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Register - Sign Up | Hyper - Responsive Bootstrap 4 Admin Dashboard</title>
+        <title>Register - Sign Up</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="Coderthemes" name="author" />
@@ -79,7 +79,7 @@
 
                         <div class="row mt-3">
                             <div class="col-12 text-center">
-                                <p class="text-muted">Already have account? <a href="pages-login.html" class="text-muted ml-1"><b>Log In</b></a></p>
+                                <p class="text-muted">Already have account? <a href="login_test.html" class="text-muted ml-1"><b>Log In</b></a></p>
                             </div> <!-- end col-->
                         </div>
                         <!-- end row -->
