--- a/src/main/webapp/login_test.html
+++ b/src/main/webapp/login_test.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Log In | Hyper - Responsive Bootstrap 4 Admin Dashboard</title>
+        <title>Log In</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="Coderthemes" name="author" />
@@ -19,18 +19,18 @@
     <body class="authentication-bg pb-0" data-layout-config='{"darkMode":false}'>
 
         <div class="auth-fluid">
-            <!--Auth fluid left content -->
+            <!--Auth fluid right content -->
             <div class="auth-fluid-form-box">
-                <div class="align-items-center d-flex h-100">
+                <div class="arow justify-content-center">
                     <div class="card-body">
 
                         <!-- Logo -->
-                        <div class="auth-brand text-center text-lg-left">
+                        <div class="auth-brand text-center text-lg-right">
                             <a href="index.html" class="logo-dark">
-                                <span><img src="images/logo-dark.png" alt="" height="18"></span>
+                                <span><img src="resources/sanfran.jpg" alt="" height="18"></span>
                             </a>
                             <a href="index.html" class="logo-light">
-                                <span><img src="images/logo.png" alt="" height="18"></span>
+                                <span><img src="resources/sanfran.jpg" alt="" height="18"></span>
                             </a>
                         </div>
 
@@ -58,24 +58,6 @@
                             <div class="form-group mb-0 text-center">
                                 <button class="btn btn-primary btn-block" type="submit"><i class="mdi mdi-login"></i> Log In </button>
                             </div>
-                            <!-- social-->
-                            <div class="text-center mt-4">
-                                <p class="text-muted font-16">Sign in with</p>
-                                <ul class="social-list list-inline mt-3">
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item border-danger text-danger"><i class="mdi mdi-google"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item border-info text-info"><i class="mdi mdi-twitter"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item border-secondary text-secondary"><i class="mdi mdi-github-circle"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
                         </form>
                         <!-- end form-->
 
@@ -88,7 +70,7 @@
                 </div> <!-- end .align-items-center.d-flex.h-100-->
             </div>
             <!-- end auth-fluid-form-box-->
-
+		</div>
         <!-- bundle -->
         <script src="js/vendor.min.js"></script>
         <script src="js/app.min.js"></script>
