--- a/src/main/webapp/user_page.html
+++ b/src/main/webapp/user_page.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>user page</title>
   	<link rel="stylesheet" type="text/css" href="css/user.css" />
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
