--- a/src/main/webapp/user_page.html
+++ b/src/main/webapp/user_page.html
@@ -3,11 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>user page</title>
+
   	<link rel="stylesheet" type="text/css" href="css/user.css" />
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	<script src="javascript/user.js"></script>
 </head>
-<body>
-<div class="container">
+<body onload="myFunction()" >
+
+
+<div class="container" >
     <div class="main-body">
     
           <!-- Breadcrumb -->
@@ -68,8 +72,10 @@
                     <div class="col-sm-3">
                       <h6 class="mb-0">Full Name</h6>
                     </div>
-                    <div class="col-sm-9 text-secondary">
-                      Kenneth Valdez
+                    <div class="col-sm-9 text-secondary" >
+                    	<div id="user-page-body" >
+                    	Kenneth 
+                    	</div>
                     </div>
                   </div>
                   <hr>
