change submit to button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,7 +61,7 @@
   	</thead>
   		<tbody></tbody>
   	</table>
-  <!-- 
+   
   <div class="container">
 	  <!-- sign-in Modal -->
 	  <div class="modal fade" id="sign-in-Modal" role="dialog">
@@ -79,7 +79,7 @@
 				    <form  id="sign-in-form"> 
 					      <input type="text" id="sign-in-model-name" class="fadeIn second" name="register" placeholder="user name">
 					      <input type="text" id="sign-in-model-password" class="fadeIn third" name="register" placeholder="password">
-					      <input type="submit" class="fadeIn fourth" value="Log In" onclick=login() >
+					      <input type="button" class="fadeIn fourth" value="Log In" onclick=login() >
 				    </form>
 	
 				    <!-- Remind Passowrd -->
@@ -115,7 +115,7 @@
 				      <input type="text" id="reg-nick-name" class="fadeIn second" name="register" placeholder="nick name" required>
 				      <input type="text" id="reg-email" class="fadeIn second" name="register" placeholder="email" required>
 				      <input type="text" id="reg-address" class="fadeIn second" name="register" placeholder="address" required>
-				      <input type="submit" class="fadeIn fourth" value="submit" onclick=regNewUser() >
+				      <input type="button" class="fadeIn fourth" value="submit" onclick=regNewUser() >
 				    </form>
 	
 				</div>
