fixed first user bug

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -115,6 +115,7 @@
 				      <input type="text" id="reg-nick-name" class="fadeIn second" name="register" placeholder="nick name" required>
 				      <input type="text" id="reg-email" class="fadeIn second" name="register" placeholder="email" required>
 				      <input type="text" id="reg-address" class="fadeIn second" name="register" placeholder="address" required>
+				      <input type="text" id="reg-description" class="fadeIn second" name="register" placeholder="description (up to 200 charachters)" required>
 				      <input type="button" class="fadeIn fourth" value="submit" onclick=regNewUser() >
 				    </form>
 	
