--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -5,11 +5,18 @@
 <title>user page 3</title>
 
   	<link rel="stylesheet" type="text/css" href="css/user.css" />
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  	<link rel="icon" type="image/png" href="C:\Users\shaha\OneDrive\Desktop\lumber\planks.png">
-	<script src="javascript/user.js"></script>
-	<script src="C:\Users\shaha\OneDrive\Desktop\usr1.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	<link rel="icon" type="image/png" href="resources/planks.png">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="javascript/user.js"></script>
+	<script>
+		$(document).ready(function(){
+		  $("#myBtn").click(function(){
+		    $("#myModal").modal();
+		  });
+		});
+</script>
 
 </head>
 
@@ -122,7 +129,8 @@
 	<!-- /projects -->	
 	
 	<!-- orders -->
-	<p id="orders"><h3 style="display:inline;color:#1F618D">Last Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#Comment-Modal"> new</a></p>
+	<h3 style="display:inline;color:#1F618D">Last Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#Comment-Modal"> new</a> 
+	
 	<div class="container">
 		<table class="table">
 			<thead>
@@ -146,7 +154,7 @@
 	<!-- /orders -->
 	
 	<!-- comments -->
-	<p id="comments" ><h3 style="display:inline;color:#1F618D">Comments</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#Comment-Modal"> new</a></p>
+	<p id="comments" ><h3 style="display:inline;color:#1F618D">Comments</h3><a data-target="#myModal" data-toggle="modal" href="#myModal"> new</a></p>
 	<div class="container">
 		
 		
@@ -161,36 +169,28 @@
 	</div>	
 	<!-- /personal detail -->
 	
-	<div class="container">
-		<!-- new commet Modal -->
-		<div class="modal fade" id="Comment-Modal" role="dialog">
-			<div class="modal-dialog">
-				<div class="wrapper fadeInDown">
-					<div id="formContent">
-					<!-- Tabs Titles -->
-						<!-- Icon -->
-						<div class="fadeIn first">
-							<button type="button" class="close" data-dismiss="modal">&times;</button>
-							<img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-						</div>
-		
-						<!-- Login Form -->
-						<form  id="sign-in-form"> 
-							  <input type="text" id="sign-in-model-name" class="fadeIn second" name="register" placeholder="user name">
-							  <input type="text" id="sign-in-model-password" class="fadeIn third" name="register" placeholder="password">
-							  <input type="button" class="fadeIn fourth" value="Log In" onclick=login() >
-						</form>
-		
-						<!-- Remind Passowrd -->
-						<div id="formFooter">
-						  <a class="underlineHover" href="#">Forgot Password?</a>
-						</div>
-		
-					</div>
-				</div>      
-			</div>
-		</div>  
-	</div>
+	
+  	  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+	
 </div>
 
 </body>
