--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -179,11 +179,7 @@
 	        </div>
 	        <div class="modal-body">
 	          <p>user</p>
-	            <select name="cars" id="cars">
-					<option value="volvo">Volvo</option>
-					<option value="saab">Saab</option>
-					<option value="opel">Opel</option>
-					<option value="audi">Audi</option>
+	            <select name="users" id="users">
 				</select>
 	        </div>
 	        <div class="modal-footer">
