--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -175,15 +175,17 @@
 	      <div class="modal-content">
 	        <div class="modal-header">
 	          <button type="button" class="close" data-dismiss="modal">&times;</button>
-	          <h4 class="modal-title">Modal Header</h4>
+	          <h4 class="modal-title">send a direct message to a friend</h4>
 	        </div>
 	        <div class="modal-body">
-	          <p>user</p>
+	          	<p>user</p>
 	            <select name="users" id="users">
 				</select>
+				<label>your message</label>
+				<input type="text" id="msg"></input>
 	        </div>
 	        <div class="modal-footer">
-	          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	          <button type="button" class="btn btn-default" data-dismiss="modal" onclick="sendMessage()">Send</button>
 	        </div>
 	      </div>
 	      
