minor fix to user page

--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -25,7 +25,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#orders">Orders</a></li>
-				<li><a href="#comments">Comments</a></li>
+				<li><a href="#messages">Messages</a></li>
 				<li><a href="#personal">Personal Details</a></li>
 			</ul>
 		</div>
@@ -139,7 +139,7 @@
 				<tr>
 					<td>23354</td>
 					<td>Tue 16.02.2021 12:32.233</td>
-					<td>#8362 25.95</td>
+					<td>&#8362 25.95</td>
 					<td>yes</td>
 				</tr>      
 			</tbody>
@@ -148,7 +148,7 @@
 	<!-- /orders -->
 	
 	<!-- comments -->
-	<p id="comments" ><h3 style="display:inline;color:#1F618D">Comments</h3>
+	<p id="messages" ><h3 style="display:inline;color:#1F618D">Messages</h3>
 		<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
 		<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
 	</p>
