added some icons

--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -61,7 +61,7 @@
 	</div>
 
 	<!-- projects -->
-	<p id="projects" ><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a></p>
+	<p id="projects" ><img src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a></p>
 	<div class="row gutters-sm">
 		<div class="col-sm-6 mb-3">
 			<p><h3 style="color:#9B59B6">in progress</h3></p>
@@ -123,7 +123,8 @@
 	<!-- /projects -->	
 	
 	<!-- orders -->
-	<h3 style="display:inline;color:#1F618D">Last Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#Comment-Modal"> new</a> 
+	<img alt="" src="resources/order-icon.png" class="messages-icon">
+	<h3 style="display:inline;color:#1F618D"> Orders</h3><a href="#Comment-Modal" data-toggle="modal" data-target="#Comment-Modal"> new</a> 
 	
 	<div class="container">
 		<table class="table">
@@ -147,8 +148,8 @@
 	</div>
 	<!-- /orders -->
 	
-	<!-- comments -->
-	<p id="messages" ><h3 style="display:inline;color:#1F618D">Messages</h3>
+	<!-- messages -->
+	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Messages</h3>
 		<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
 		<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
 	</p>
@@ -159,7 +160,7 @@
 	<!-- /comments -->
 	
 	<!-- personal detail -->
-	<p id="personal"><h3 style="display:inline;color:#1F618D">Personal Details</h3><a href="#personal"> edit</a></p>
+	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a></p>
 	<div class="container">
 		
 		
