--- a/src/main/webapp/user_page1.html
+++ b/src/main/webapp/user_page1.html
@@ -61,64 +61,78 @@
 	</div>
 
 	<!-- projects -->
-	<p id="projects" ><img src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a></p>
-	<div class="row gutters-sm">
-		<div class="col-sm-6 mb-3">
-			<p><h3 style="color:#9B59B6">in progress</h3></p>
-		  <div class="card h-100">
-			<div class="card-body">
-			  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
-			  <small>Web Design</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Website Markup</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>One Page</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Mobile Template</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Backend API</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			</div>
-		  </div>
-		</div>
-		<div class="col-sm-6 mb-3">
-			<p><h3 style="color:#2ECC71">completed</h3></p>
-		  <div class="card h-100">
-			<div class="card-body">
-			  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
-			  <small>Web Design</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Website Markup</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>One Page</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Mobile Template</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			  <small>Backend API</small>
-			  <div class="progress mb-3" style="height: 5px">
-				<div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-			  </div>
-			</div>
-		  </div>
-		</div>
+	<p id="projects"><img alt="" src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a></p>
+	<p></p>
+	<div class="row gutters-sm">	
+		<div class="container">
+			<table class="table table-striped table-dark" >	
+				<tbody>
+					<tr>
+						<td>
+							<div class="col-sm-6 mb-3">
+								<p><h3 style="color:#9B59B6">in progress</h3>
+								</p>
+							  <div class="card h-100">
+								<div class="card-body">
+								  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
+								  <small>Web Design</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Website Markup</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>One Page</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Mobile Template</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Backend API</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								</div>
+							  </div>
+							</div>
+						</td>
+						<td>
+							<div class="col-sm-6 mb-3">
+								<p><h3 style="color:#2ECC71">completed</h3></p>
+							  <div class="card h-100">
+								<div class="card-body">
+								  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
+								  <small>Web Design</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Website Markup</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>One Page</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Mobile Template</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								  <small>Backend API</small>
+								  <div class="progress mb-3" style="height: 5px">
+									<div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+								  </div>
+								</div>
+							  </div>
+							</div>
+						</td>
+					</tr>      
+				</tbody>
+			</table>
+		</div>	
 	</div>
 	<!-- /projects -->	
 	
@@ -146,6 +160,7 @@
 			</tbody>
 		</table>
 	</div>
+	
 	<!-- /orders -->
 	
 	<!-- messages -->
@@ -161,10 +176,16 @@
 	
 	<!-- personal detail -->
 	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a></p>
-	<div class="container">
+	
+		<div class="card-personal">
+		<img src="img_avatar.png" alt="Avatar" style="width:100%">
+		  <div class="container">
+		    <h4><b>John Doe</b></h4> 
+		    <p>Architect & Engineer</p> 
+		  </div>
+		</div>
 		
-		
-	</div>	
+	
 	<!-- /personal detail -->
 	
 	
@@ -183,7 +204,7 @@
 	            <select name="users" id="users">
 				</select>
 				<label>your message</label>
-				<input type="text" id="msg"></input>
+				<input type="text" id="msg">
 	        </div>
 	        <div class="modal-footer">
 	          <button type="button" class="btn btn-default" data-dismiss="modal" onclick="sendMessage()">Send</button>
