--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>the Lumber yard Home Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -39,7 +39,7 @@
         		<li><a href="#about">ABOUT</a></li>
         		<li><a href="#services">SERVICES</a></li>
         		<li><a href="#portfolio">PORTFOLIO</a></li>
-        		<li><a href="#pricing">PRICING</a></li>
+        		<li><a href="#products">PRODUCTS</a></li>
         		<li><a href="#contact">CONTACT</a></li>
       		</ul>
       	</div>
@@ -276,10 +276,10 @@
   </div>
 </div>
 
-<!-- Container (Pricing Section) -->
-<div id="pricing" class="container-fluid">
+<!-- Container (Products Section) -->
+<div id="products" class="container-fluid">
   <div class="text-center">
-    <h2>Pricing</h2>
+    <h2>Products</h2>
     <h4>Choose a payment plan that works for you</h4>
   </div>
   <div class="row slideanim">
