--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -61,7 +61,7 @@
 	</div>
 
 	<!-- projects -->
-	<p id="projects"><img alt="" src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a></p>
+	<p><img alt="" src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a>
 	<p></p>
 	<div class="row gutters-sm">	
 		<div class="container">
@@ -71,7 +71,7 @@
 						<td>
 							<div class="col-sm-6 mb-3">
 								<p><h3 style="color:#9B59B6">in progress</h3>
-								</p>
+								
 							  <div class="card h-100">
 								<div class="card-body">
 								  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
@@ -101,7 +101,7 @@
 						</td>
 						<td>
 							<div class="col-sm-6 mb-3">
-								<p><h3 style="color:#2ECC71">completed</h3></p>
+								<p><h3 style="color:#2ECC71">completed</h3>
 							  <div class="card h-100">
 								<div class="card-body">
 								  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
@@ -154,7 +154,7 @@
 				<tr>
 					<td>23354</td>
 					<td>Tue 16.02.2021 12:32.233</td>
-					<td>&#8362 25.95</td>
+					<td>&#8362; 25.95</td>
 					<td>yes</td>
 				</tr>      
 			</tbody>
@@ -167,7 +167,7 @@
 	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Messages</h3>
 		<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
 		<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
-	</p>
+	
 	<div class="container">
 		
 		
@@ -175,13 +175,13 @@
 	<!-- /comments -->
 	
 	<!-- personal detail -->
-	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a></p>
+	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a>
 	
 		<div class="card-personal">
 		<img src="img_avatar.png" alt="Avatar" style="width:100%">
 		  <div class="container">
 		    <h4><b>John Doe</b></h4> 
-		    <p>Architect & Engineer</p> 
+		    <p>Architect & Engineer
 		  </div>
 		</div>
 		
