--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -169,7 +169,9 @@
 		<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
 	
 	<div class="container">
-		
+	<form>
+		<input id="file" type="file" />
+	</form>
 		
 	</div>
 	<!-- /comments -->
