--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -170,11 +170,13 @@
 	
 	<div class="container">
 	<form>
-		<input id="file" type="file" />
+		<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" multiple/>
 	</form>
 		
 	</div>
-	<!-- /comments -->
+	<output id="output">
+	</output>
+	<!-- /messages -->
 	
 	<!-- personal detail -->
 	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a>
