added onclick images upload functionality

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -170,7 +170,7 @@
 	
 	<div class="container">
 	<form>
-		<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" multiple/>
+		<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" onchange="onChange(this)" multiple/>
 	</form>
 		
 	</div>
