--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -164,11 +164,18 @@
 	<!-- /orders -->
 	
 	<!-- messages -->
-	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Messages</h3>
-		<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
-		<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
+
+	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D; "> Messages</h3>
+		<span style="display:inline-block; widht:50%;">
+			<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
+			<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
+		</span>
+		<span style="float:right; padding:10px; padding-right:100px; ">
+			<a href="#file" onclick="showFileLoad()">load images</a>
+		</span>
+		
 	
-	<div class="container">
+	<div class="container" id="file-upload-area" style="display:none;">
 	<form>
 		<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" onchange="onChange(this)" multiple/>
 	</form>
