hide upload fix

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -166,14 +166,14 @@
 	<!-- messages -->
 
 	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D; "> Messages</h3>
-		<span style="display:inline-block; widht:50%;">
+		<span style="display:inline-block;">
 			<a data-target="#send-Message-Modal" data-toggle="modal" href="#send-Message-Modal"> user(send message)</a>
 			<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
 		</span>
 		<span style="float:right; padding:10px; padding-right:100px; ">
 			<a href="#file" onclick="showFileLoad()">load images</a>
 		</span>
-		
+	</p>	
 	
 	<div class="container" id="file-upload-area" style="display:none;">
 	<form>
@@ -183,9 +183,12 @@
 	</div>
 	<output id="output">
 	</output>
+	<p><button type="button" id="upload-file-btn" class="btn btn-success" style="display:none;">upload</button></p>
+	<div></div>
 	<!-- /messages -->
 	
 	<!-- personal detail -->
+	<p></p>
 	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a>
 	
 		<div class="card-personal">
@@ -195,7 +198,7 @@
 		    <p>Architect & Engineer
 		  </div>
 		</div>
-		
+	</p>
 	
 	<!-- /personal detail -->
 	
