--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -183,7 +183,16 @@
 	</div>
 	<output id="output">
 	</output>
-	<p><button type="button" id="upload-file-btn" class="btn btn-success" style="display:none;">upload</button></p>
+	
+	<p>
+		<span style="display:inline-block;">
+			<button type="button" id="upload-file-btn" class="btn btn-success" style="display:none;" onclick="upload()">upload</button>
+		</span>
+		<span style="float:right; padding-right:100px; ">
+			<button type="button" id="cancel-file-btn" class="btn btn-danger" style="display:none;" onclick="cancel()">cancel</button>
+		</span>
+		
+	</p>
 	<div></div>
 	<!-- /messages -->
 	
