--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -19,7 +19,7 @@
 <!-- navigation bar -->
 <div class="container">
 	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="col-sm-2"><a class="navbar-brand" href="#">Home</a></div>
+		<div class="col-sm-2"><a class="navbar-brand" href="index.html">Home</a></div>
 		
 		<div class="col-sm-6" align="center">
 			<ul class="nav navbar-nav">
@@ -32,9 +32,9 @@
 		
 		<div class="col-sm-4">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="../navbar/">Default</a></li>
-				<li><a href="../navbar-static-top/">Static top</a></li>
-				<li><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+				<!-- li><a href="../navbar/">Default</a></li>
+				<li><a href="../navbar-static-top/">Static top</a></li -->
+				<li><a style="display: inline-block">hello</a><a href="" id="user-details-header" style="display: inline-block"></a></li>
 			</ul>
 		</div>
 		
