--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -172,7 +172,7 @@
 		<span style="float:right; padding:10px; padding-right:100px; ">
 			<a href="#file" onclick="showFileLoad()">load images</a>
 		</span>
-	</p>	
+		
 	
 	<div class="container" id="file-upload-area" style="display:none;">
 	<form>
@@ -182,32 +182,72 @@
 	</div>
 	<form id="output" action="upload" method="post" enctype="multipart/form-data">
 		<p>
-		<span style="display:inline-block;">
-			<button type="button" id="upload-file-btn" class="btn btn-success" style="display:none;" onclick="upload()">upload</button>
-		</span>
-		<span style="float:right; padding-right:100px; ">
-			<button type="button" id="cancel-file-btn" class="btn btn-danger" style="display:none;" onclick="cancel()">cancel</button>
-		</span>
-		
-	</p>
+			<span style="display:inline-block;">
+				<button type="button" id="upload-file-btn" class="btn btn-success" style="display:none;" onclick="upload()">upload</button>
+			</span>
+			<span style="float:right; padding-right:100px; ">
+				<button type="button" id="cancel-file-btn" class="btn btn-danger" style="display:none;" onclick="cancel()">cancel</button>
+			</span>		
+		</p>
 	</form>
-	
 
 	<div></div>
 	<!-- /messages -->
 	
 	<!-- personal detail -->
 	<p></p>
-	<p id="personal"><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal"> edit</a>
-	
-		<div class="card-personal">
+	<p><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal" onclick="edit()"> edit</a>
+		<div class="container" id="personal">
+
+		<form>
+		  <div class="form-row">
+		    <div class="form-group col-md-6">
+		      <label for="user-name" >User name</label>
+		      <input type="email" class="form-control" id="pt-user-name"  style="display:inline;">
+		    </div>
+		    <div class="form-group col-md-6">
+		      <label for="pt-password">Password</label>
+		      <input type="password" class="form-control" id="pt-password" >
+		    </div>
+		  </div>
+		  <div class="form-row">
+		  <div class="form-group col-md-6">
+		    <label for="pt-nickname">Nickname</label>
+		    <input type="text" class="form-control" id="pt-nickname" >
+		  </div>
+		  <div class="form-group col-md-6">
+		    <label for="pt-address">Address</label>
+		    <input type="text" class="form-control" id="pt-address">
+		  </div>
+		  </div>
+		  <div class="form-row">
+		    <div class="form-group col-md-6">
+		      <label for="pt-email">E-mail</label>
+		      <input type="text" class="form-control" id="pt-email">
+		    </div>
+		    <div class="form-group col-md-4">
+		      <label for="pt-phone">Phone</label>
+		      <input type="text" class="form-control" id="pt-phone">
+		    </div>
+		    <div class="form-group col-md-2">
+		      <label for="inputZip">Zip</label>
+		      <input type="text" class="form-control" id="inputZip">
+		    </div>
+		  </div>
+			<div class="form-row">
+		  		<button type="submit" class="btn btn-primary" id="pt-update">update</button>
+		  	</div>
+		</form>
+		
+		</div>
+		<!-- div class="card-personal">
 		<img src="img_avatar.png" alt="Avatar" style="width:100%">
 		  <div class="container">
-		    <h4><b>John Doe</b></h4> 
+		    <h4><b id="pt-user-name">John Doe</b></h4> 
 		    <p>Architect & Engineer
 		  </div>
-		</div>
-	</p>
+		</div -->
+
 	
 	<!-- /personal detail -->
 	
