adding products image

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -277,71 +277,140 @@
 </div>
 
 <!-- Container (Products Section) -->
-<div id="products" class="container-fluid">
-  <div class="text-center">
-    <h2>Products</h2>
-    <h4>Choose a payment plan that works for you</h4>
-  </div>
-  <div class="row slideanim">
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Basic</h1>
+<div id="products" class="container container-fluid">
+        <div class="text-center">
+            <h2>Products</h2>
+            <h4>Choose the type you need, length and quantity</h4>
         </div>
-        <div class="panel-body">
-          <p><strong>20</strong> Lorem</p>
-          <p><strong>15</strong> Ipsum</p>
-          <p><strong>5</strong> Dolor</p>
-          <p><strong>2</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
+        <div class="row slideanim">
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/10X10type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3>10x10 type pine wood </h3>
+                        <h4>13$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/10X20type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3>10x20 type pine wood </h3>
+                        <h4>15$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/10X2type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3> 10x02 type pine wood</h3>
+                        <h4>8$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="panel-footer">
-          <h3>$19</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+
+
+        <div class="row slideanim">
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/10X5type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3>10x05 type pine wood </h3>
+                        <h4>11.5$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/15X5type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3>15x05 type pine wood </h3>
+                        <h4>12$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <div class="panel panel-default text-center">
+                    <div class="panel-body">
+                        <img src="resources/5X5type.jpg" class="img-responsive img-display">
+                    </div>
+                    <div class="panel-footer">
+                        <h3> 05x05 type pine wood</h3>
+                        <h4>6.5$ per meter</h4>
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="length in centimeters">
+                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <button type="submit" name="add" id="AddToCart" style="margin-top: 5px;"
+                            class="btn btn--large btn--full btn--clear uppercase">
+                            <span id="AddToCart">
+                                Add To Cart
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>      
-    </div>     
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Pro</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>50</strong> Lorem</p>
-          <p><strong>25</strong> Ipsum</p>
-          <p><strong>10</strong> Dolor</p>
-          <p><strong>5</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$29</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>      
-    </div>       
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Premium</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>100</strong> Lorem</p>
-          <p><strong>50</strong> Ipsum</p>
-          <p><strong>25</strong> Dolor</p>
-          <p><strong>10</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$49</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>      
-    </div>    
-  </div>
-</div>
+
+
+    </div>
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
