load user messages when user-page onload fires

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>user page 3</title>
+<title>user</title>
 
   	<link rel="stylesheet" type="text/css" href="css/user.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
