minor fix, before load user messages implementation

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -185,7 +185,7 @@
 	
 		<p>user</p>
        	<select name="users" id="users"></select>
-		<textarea id="msg-txt" name="msg-txt" placeholder="enter text here..."></textarea>		
+		<textarea id="msg-txt" name="msg-txt" onkeypress="onTextChange()" placeholder="enter text here..."></textarea>		
 		
 		<form id="output" action="upload" method="post" enctype="multipart/form-data">
 			<p>
